# mocktail

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml  ci-checks.yml  deploy.yml
book/: book.toml
book/src/: SUMMARY.md  defining-mocks.md  getting-started.md  introduction.md
book/src/concepts/: matchers.md  mock-builder.md  mock-server.md  mock-set.md
book/src/concepts/matchers/: any.md  body.md  custom.md  headers.md  method.md  path.md  query-params.md
book/src/concepts/mock-builder/: then.md  when.md
book/src/defining-mocks/: example-custom-matcher.md  example-grpc-bidi-streaming.md  example-grpc-client-streaming.md  example-grpc-server-streaming.md  example-grpc-unary.md  example-http-simple.md  example-http-streaming-ndjson.md  example-http-streaming-sse.md
mocktail/: Cargo.toml
mocktail-test/: Cargo.toml  build.rs
mocktail-test/src/: grpc_health.rs  grpc_hello.rs  http_hello.rs  http_simple.rs  http_sse.rs  lib.rs
mocktail-tests/: Cargo.toml  build.rs
mocktail-tests/src/: lib.rs
mocktail-tests/tests/examples/: grpc_client_streaming.rs  grpc_server_streaming.rs  grpc_streaming.rs  grpc_unary.rs  headers.rs  http.rs  http_streaming.rs  http_unary.rs  mod.rs
mocktail-tests/tests/misc/: validation.rs
mocktail/src/: body.rs  codegen.rs  ext.rs  form.rs  headers.rs  lib.rs  matchers.rs  mock.rs  mock_builder.rs  mock_set.rs  request.rs  response.rs  server.rs  service.rs  status.rs  then.rs  utils.rs  when.rs
mocktail/src/body/: buf_list.rs
mocktail/src/mock/: body.rs  path.rs  request.rs  response.rs  set.rs
mocktail/src/mock_builder/: then.rs  when.rs
mocktail/src/server/: grpc.rs  http.rs
mocktail/src/server/service/: grpc.rs  http.rs
mocktail/src/service/: grpc.rs  http.rs
tests/: Cargo.toml
tests/proto/: example.proto
tests/tests/: lib.rs
tests/tests/examples/: grpc_client_streaming.rs  grpc_server_streaming.rs  grpc_unary.rs  mod.rs
