[package]
name = "mocktail-tests"
edition = "2021"

[dependencies]
tokio = "1.43.0"
tonic = "0.12.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
prost = "0.13.5"
prost-types = "0.13.5"
anyhow = "1.0.96"
futures = "0.3.31"
mocktail = { path = "../mocktail" }
http = "1.1.0"
reqwest = { version = "0.12.12", features = ["stream", "native-tls-alpn"] }
eventsource-stream = "0.2.3"
tokio-stream = "0.1.17"
test-log = { version = "0.2.17", features = ["trace"] }
tracing = "0.1.41"
hyper = { version = "1.6.0", features = ["full"] }

[build-dependencies]
tonic-build = "*"
