[package]
name = "mocktail-tests"
edition = "2021"

[dependencies]
tokio = "1"
tonic = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
anyhow = "1"
futures = "0"
mocktail = { path = "../mocktail" }
http = "1"
reqwest = { version = "0", features = ["stream", "json", "native-tls-alpn"] }
eventsource-stream = "0"
tokio-stream = "0"
test-log = { version = "0", features = ["trace"] }
tracing = "0"

[build-dependencies]
tonic-build = "0.13"
