[package]
name = "mocktail"
version = "0.2.1-alpha"
edition = "2021"
authors = ["Dan Clark"]
description = "HTTP & gRPC server mocking for Rust"

license = "Apache-2.0"
repository = "https://github.com/IBM/mocktail"
documentation = "https://docs.rs/mocktail/"
readme = "../README.md"

keywords = ["mocking", "grpc-mocking", "http-mocking", "grpc", "testing"]
categories = ["development-tools", "development-tools::testing"]

[lib]
doctest = false

[dependencies]
bytes = "1.9.0"
futures = "0.3.31"
h2 = { version = "0.4.8", features = ["stream"] }
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
prost = "0.13.3"
rand = "0.9.0"
reqwest = { version = "0.12.9", features = ["stream", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
tracing = "0.1.41"
url = "2.5.4"
