[package]
name = "mocktail"
version = "0.2.2-alpha"
edition = "2021"
authors = ["Dan Clark"]
description = "HTTP & gRPC server mocking for Rust"

license = "Apache-2.0"
repository = "https://github.com/IBM/mocktail"
documentation = "https://docs.rs/mocktail/"
readme = "../README.md"

keywords = ["mocking", "grpc-mocking", "http-mocking", "grpc", "testing"]
categories = ["development-tools", "development-tools::testing"]

[lib]
doctest = false

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
h2 = { version = "0.4.8", features = ["stream"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
prost = "0.13.5"
rand = "0.9.0"
reqwest = { version = "0.12.14", features = ["stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
tracing = "0.1.41"
url = "2.5.4"
