[package]
name = "mocktail"
version = "0.2.2-alpha"
edition = "2021"
authors = ["Dan Clark"]
description = "HTTP & gRPC server mocking for Rust"

license = "Apache-2.0"
repository = "https://github.com/IBM/mocktail"
documentation = "https://docs.rs/mocktail/"
readme = "../README.md"

keywords = ["mocking", "grpc-mocking", "http-mocking", "grpc", "testing"]
categories = ["development-tools", "development-tools::testing"]

[lib]
doctest = false

[dependencies]
bytes = "1"
futures = "0"
http = "1"
http-body = "1"
http-body-util = "0"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0", features = ["tokio", "server-auto"] }
prost = "0"
rand = "0"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1"
tokio-stream = "0"
tonic = "0"
tracing = "0"
url = "2"
